src/test/ui/issues/issue-5XXXX/issue-52533-1.stderr
error[E0308]: mismatched types
  --> $DIR/issue-52533-1.rs:9:18
   |
LL |     gimme(|x, y| y)
   |                  ^ lifetime mismatch
   |
   = note: expected reference `&Foo<'_, '_, u32>`
              found reference `&Foo<'_, '_, u32>`
note: the anonymous lifetime #3 defined here...
  --> $DIR/issue-52533-1.rs:9:11
   |
LL |     gimme(|x, y| y)
   |           ^^^^^^^^
note: ...does not necessarily outlive the anonymous lifetime #2 defined here
  --> $DIR/issue-52533-1.rs:9:11
   |
LL |     gimme(|x, y| y)
   |           ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
